# team_green_eggs_and_ham

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  TargetDetector.cpp  TargetProcessing  Video.cpp  Video.hpp  main.cpp
src/: CMakeLists.txt  TargetDetector.cpp  TargetProcessor.cpp
